# crtc_player

./: .gitignore  README.md
Win/: CMakeLists.txt
Win/WebRTCDemo/: CMakeLists.txt  PlayerMainForm.cpp  PlayerMainForm.ui  QtConfigParameterDig.cpp  QtConfigParameterDig.h  Slider.h
Win/YUV420Player/: CMakeLists.txt  PlayerMainForm.cpp  PlayerMainForm.h  QVideoRenderWidget.cpp  QVideoRenderWidget.h  Slider.cpp
